<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MorningAdhkarActivity">

        <ImageButton
            android:id="@+id/stopButton03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Stop"
            android:onClick="stopAudio"
            android:src="@drawable/baseline_stop_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_4" />

        <ImageButton
            android:id="@+id/pauseButton03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Pause"
            android:onClick="pauseAudio"
            android:src="@drawable/baseline_pause_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_4" />

        <ImageButton
            android:id="@+id/playButton03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Play"
            android:onClick="playAudio"
            android:src="@drawable/baseline_play_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.257"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_4" />

        <ImageButton
            android:id="@+id/pauseButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Pause"
            android:onClick="pauseAudio"
            android:src="@drawable/baseline_pause_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_4" />

        <ImageButton
            android:id="@+id/playButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Play"
            android:onClick="playAudio"
            android:src="@drawable/baseline_play_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_4" />

        <ImageButton
            android:id="@+id/stopButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Stop"
            android:onClick="stopAudio"
            android:src="@drawable/baseline_stop_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_4" />

        <TextView
            android:id="@+id/textView1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_1_1"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1_2"
            android:layout_width="290dp"
            android:layout_height="192dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_1_2"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_1" />

        <TextView
            android:id="@+id/textView2_1"
            android:layout_width="290dp"
            android:layout_height="59dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_2_1"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_inthenameofallah_1" />

        <TextView
            android:id="@+id/textView2_2"
            android:layout_width="290dp"
            android:layout_height="87dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_2_2"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_inthenameofallah_2" />

        <TextView
            android:id="@+id/textView2_3"
            android:layout_width="290dp"
            android:layout_height="110dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_2_3"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_inthenameofallah_3" />

        <TextView
            android:id="@+id/textView2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_2_4"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="290dp"
            android:layout_height="224dp"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_3"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pauseButton02" />

        <ImageButton
            android:id="@+id/playButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Play"
            android:onClick="playAudio"
            android:src="@drawable/baseline_play_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_2" />

        <ImageButton
            android:id="@+id/pauseButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Pause"
            android:onClick="pauseAudio"
            android:src="@drawable/baseline_pause_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_2" />

        <ImageButton
            android:id="@+id/stopButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Stop"
            android:onClick="stopAudio"
            android:src="@drawable/baseline_stop_circle_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_2" />


        <TextView
            android:id="@+id/textView2_inthenameofallah_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_2_inthenameofallah"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pauseButton01" />

        <TextView
            android:id="@+id/textView2_inthenameofallah_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_2_inthenameofallah"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_1" />

        <TextView
            android:id="@+id/textView2_inthenameofallah_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/morning_adhkar_2_inthenameofallah"
            android:textColor="@color/app_main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_2" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="stopButton01,pauseButton01,playButton01" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>